.data/projects/darklua-0.17.2/src/nodes/expressions/snapshots/darklua_core__nodes__expressions__test__expression_from_integers__i8_max.snap
---
source: src/nodes/expressions/mod.rs
expression: result
---
Unary(
    UnaryExpression {
        operator: Minus,
        expression: Number(
            Decimal(
                DecimalNumber {
                    float: 128.0,
                    exponent: None,
                    token: None,
                },
            ),
        ),
        token: None,
    },
)
