.data/projects/darklua-0.17.2/src/nodes/expressions/snapshots/darklua_core__nodes__expressions__test__expression_from_integers__u32_max.snap
---
source: src/nodes/expressions/mod.rs
expression: result
---
Number(
    Decimal(
        DecimalNumber {
            float: 4294967295.0,
            exponent: None,
            token: None,
        },
    ),
)
