.data/projects/darklua-0.17.2/src/nodes/expressions/snapshots/darklua_core__nodes__expressions__test__expression_from_integers__u64_max.snap
---
source: src/nodes/expressions/mod.rs
expression: result
---
Number(
    Decimal(
        DecimalNumber {
            float: 1.8446744073709552e19,
            exponent: Some(
                (
                    3,
                    true,
                ),
            ),
            token: None,
        },
    ),
)
